<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding.OnBoardingScreen03">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/boarding03txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delegate"
            android:textColor="#C26682"
            android:textSize="45sp"
            android:fontFamily="@font/notoseriftamil_semicondensed_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/boarding03txt2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onBoarding03txt02"
            android:textColor="#C26682"
            android:textSize="20sp"
            android:fontFamily="@font/notoseriftamil_regular"
            android:textStyle="normal"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boarding03txtID"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/onBoarding03Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/boarding03txt2ID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/next_text"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            android:textSize="15sp"
            android:fontFamily="@font/lora_semibold"
            android:layout_marginTop="50dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>